| Summary: | ASTERISK-22709: crash: atxfer threeway call results in crash while creating channel snapshot | ||||
| Reporter: | John Bigelow (jbigelow) | Labels: | |||
| Date Opened: | 2013-10-15 14:31:42 | Date Closed: | 2013-12-18 14:30:01.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Bridges/bridge_builtin_features Bridges/bridge_simple Bridges/bridge_softmix Core/Channels Resources/res_features | ||
| Versions: | SVN 12.0.0-beta1 | Frequency of Occurrence | One Time | ||
| Related Issues: |
| ||||
| Environment: | Asterisk trunk r400862 | Attachments: | ( 0) backtrace_4980.txt ( 1) full81.txt ( 2) full82.txt ( 3) full83.txt ( 4) full84.txt | ||
| Description: | The atxfer_threeway_nominal test suite test (currently up for review along with a corresponding review for the minor test suite event addition to Asterisk) detected a crash on the 21st execution of the test (executed in a bash loop).
Test description: Set up a bridge between two endpoints and initiate an attended transfer without completing it. Then execute the attended transfer three-way call feature and ensure it is detected and executed properly. Two transfers are performed; one initiated by Alice, and the other by Bob. In both cases, the destination is Charlie. I have attached the backtrace and the full logs of each of the four instances of Asterisk. Minor Asterisk changes for test: https://reviewboard.asterisk.org/r/2912/ Test Suite test: https://reviewboard.asterisk.org/r/2913/ | ||||
| Comments: | By: Matt Jordan (mjordan) 2013-10-27 14:03:07.534-0500 Based on the backtrace here and the backtrace on ASTERISK-22614, it looks like we're going to need to lock the channel when creating snapshots. By: Joshua C. Colp (jcolp) 2013-10-27 14:05:28.648-0500 Mark has a review up doing that. :) By: Matt Jordan (mjordan) 2013-10-27 14:06:51.331-0500 Huzzah! | ||||