channels/chan_console.c
@@ -444,7 +444,6 @@ static struct ast_channel *console_new(struct console_pvt *pvt, const char *ext,
 	ast_jb_configure(chan, &global_jbconf);
 
 	ast_channel_stage_snapshot_done(chan);
-
 	ast_channel_unlock(chan);
 
 	if (state != AST_STATE_DOWN) {
